tests/machine/x/pascal/in_operator.error
line: 27
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/in_operator.pas
in_operator.pas(24,47) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
in_operator.pas(25,51) Error: Incompatible type for arg no. 1: Got "TArray$1$crc9F312717", expected "TArray$1$crcE41905E8"
in_operator.pas(27) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

